// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Form Renders add if no note prop 1`] = `
<NoteForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value=""
    >
      <p>
        <label>
          title
          :
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value=""
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="content"
      onChange={[Function]}
      style={
        Object {
          "height": "100px",
          "width": "300px",
        }
      }
      value=""
    >
      <p>
        <label>
          content
          :
          <input
            name="content"
            onChange={[Function]}
            required={true}
            style={
              Object {
                "height": "100px",
                "width": "300px",
              }
            }
            value=""
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note Form Renders add if no note prop 2`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "content": "Get a job",
            "title": "Note 1",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value="Note 1"
    >
      <p>
        <label>
          title
          :
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value="Note 1"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="content"
      onChange={[Function]}
      style={
        Object {
          "height": "100px",
          "width": "300px",
        }
      }
      value="Get a job"
    >
      <p>
        <label>
          content
          :
          <input
            name="content"
            onChange={[Function]}
            required={true}
            style={
              Object {
                "height": "100px",
                "width": "300px",
              }
            }
            value="Get a job"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note Form Renders add if no note prop 3`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "content": "Get a job",
            "title": "Note 1",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value="Note 1"
    >
      <p>
        <label>
          title
          :
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value="Note 1"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="content"
      onChange={[Function]}
      style={
        Object {
          "height": "100px",
          "width": "300px",
        }
      }
      value="Get a job"
    >
      <p>
        <label>
          content
          :
          <input
            name="content"
            onChange={[Function]}
            required={true}
            style={
              Object {
                "height": "100px",
                "width": "300px",
              }
            }
            value="Get a job"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;
